assets/stylesheet/index.css
* {
  margin: 0;
  padding: 0;
  -webkit-box-sizing: content-box;
  -moz-box-sizing: content-box;
  box-sizing: content-box;
  /*scroll-behavior: smooth;*/
}

body {
  width: fit-content;
  background: #1C1A19;
}

.wrapper {
  width: 100vw;
  max-width: 1400px;
  position: relative;
  margin-left: auto;
  margin-right: auto;
}

/* ###############################################-----HEADER----############################################### */

.mobile-header {
  position: fixed;
  min-width: 360px;
  max-width: 640px;
  height: 60px;
  left: 0px;
  top: 0px;
  background: #3E3C3C !important;
  font-family: 'Poppins', sans-serif;
}

.header {
  position: fixed;
  width: 1440px;
  height: 72px;
  left: 0px;
  top: 0px;
  background: #3E3C3C !important;
}

.logo-navbar {
  width: 9px;
  height: 1px;
  background: #DB4747;
  mix-blend-mode: lighten;
  border-radius: 50%
}
/* ###############################################-----BODY----############################################### */

.logo-desktop {
  position: absolute;
  width: 94px;
  height: 94px;
  left: 1017px;
  top: 302px;
  background: #DB4747;
  mix-blend-mode: lighten;
  border-radius: 50%;
}

.logo-mobile {
  position: absolute;
  display: none;
  width: 50px;
  height: 50px;
  left: 255px;
  top: 76px;
  background: #DB4747;
  mix-blend-mode: lighten;
  border-radius: 50%
}

.number-one {
  position: absolute;
  width: 82px;
  height: 150px;
  left: 447px;
  top: 210px;
  font-family: 'Poppins', sans-serif;
  font-style: normal;
  font-weight: 200;
  font-size: 100px;
  line-height: 150px;
  /* identical to box height */
  text-align: right;
  color: #FFFFFF;
  opacity: 0.2;
}

.number-one-mobile {
  position: absolute;
  display: none;
  width: 41px;
  height: 75px;
  left: 16px;
  top: 50px;
  font-family: 'Poppins', sans-serif;
  font-style: normal;
  font-weight: 200;
  font-size: 50px;
  line-height: 75px;
  /* identical to box height */
  text-align: right;
  color: #FFFFFF;
  opacity: 0.2;
}


.number-two {
  position: absolute;
  width: 116px;
  height: 80px;
  left: 169px;
  top: 909px;
  font-family: 'Poppins', sans-serif;
  font-style: normal;
  font-weight: 200;
  font-size: 100px;
  line-height: 80%;
  /* identical to box height, or 80px */
  text-align: right;
  color: #FFFFFF;
  opacity: 0.2;
}

.number-two-mobile {
  position: absolute;
  display: none;
  width: 58px;
  height: 75px;
  left: 16px;
  top: 551px;
  font-family: 'Poppins', sans-serif;
  font-style: normal;
  font-weight: 200;
  font-size: 50px;
  line-height: 75px;
  /* identical to box height */
  color: #FFFFFF;
  opacity: 0.2;
}

.hello {
  position: absolute;
  width: 504px;
  height: 24px;
  left: 547px;
  top: 302px;
  font-family: 'Poppins', sans-serif;
  font-style: normal;
  font-weight: normal;
  font-size: 16px;
  line-height: 24px;
  /* identical to box height */
  color: #FFFFFF;
}

.hello-mobile {
  position: absolute;
  display: none;
  width: 289px;
  height: 18px;
  left: 16px;
  top: 110px;
  font-family: 'Poppins';
  font-style: normal;
  font-weight: normal;
  font-size: 12px;
  line-height: 18px;
  /* identical to box height */
  color: #FFFFFF;
}

.name {
  position: absolute;
  width: 484px;
  height: 220px;
  left: 547px;
  top: 326px;
  font-family: 'Playfair Display', serif;
  font-style: normal;
  font-weight: normal;
  font-size: 110px;
  line-height: 100%;
  /* or 110px */
  color: #FFFFFF;
}

.name-mobile {
  position: absolute;
  display: none;
  width: 288px;
  height: 100px;
  left: 16px;
  top: 130px;
  font-family: 'Playfair Display', serif;
  font-style: normal;
  font-weight: normal;
  font-size: 50px;
  line-height: 100%;
  /* or 50px */
  color: #FFFFFF;
}

.portfolio-desktop {
  position: absolute;
  width: 504px;
  height: 24px;
  left: 286px;
  top: 960px;
  font-family: 'Poppins', sans-serif;
  font-style: normal;
  font-weight: normal;
  font-size: 16px;
  line-height: 24px;
  /* identical to box height */
  color: #FFFFFF;
}

.portfolio-mobile {
  position: absolute;
  display: none;
  width: 288px;
  height: 18px;
  left: 16px;
  top: 613px;
  font-family: 'Poppins', sans-serif;
  font-style: normal;
  font-weight: normal;
  font-size: 12px;
  line-height: 18px;
  /* identical to box height */
  color: #FFFFFF;
}

.projects-desktop {
  position: absolute;
  width: 430px;
  height: 110px;
  left: 286px;
  top: 984px;
  font-family: 'Playfair Display', serif;
  font-size: 110px;
  line-height: 100%;
  /* identical to box height, or 110px */
  color: #FFFFFF;
}

.projects-mobile {
  position: absolute;
  display: none;
  width: 288px;
  height: 50px;
  left: 16px;
  top: 631px;
  font-family: 'Playfair Display', serif;
  font-size: 50px;
  line-height: 100%;
  /* identical to box height, or 50px */
  color: #FFFFFF;
}

.my_word {
  position: absolute;
  width: 564px;
  height: 108px;
  left: 547px;
  top: 586px;
  font-family: 'Poppins', sans-serif;
  font-style: normal;
  font-weight: normal;
  font-size: 18px;
  line-height: 27px;
  color: #FFFFFF;
}

.my_word-mobile {
  position: absolute;
  display: none;
  width: 288px;
  height: 90px;
  left: 16px;
  top: 243px;
  font-family: 'Poppins', sans-serif;
  font-style: normal;
  font-weight: normal;
  font-size: 12px;
  line-height: 18px;
  color: #FFFFFF;
}

.social-text {
position: absolute;
width: 113px;
height: 21px;
left: 547px;
top: 737px;
font-family: 'Playfair Display', serif;
font-style: normal;
font-weight: 500;
font-size: 18px;
line-height: 21px;
/* identical to box height */
color: #DB4747;
}

.social-text-mobile {
  position: absolute;
  display: none;
  width: 113px;
  height: 21px;
  left: 16px;
  top: 386px;
  font-family: 'Playfair Display', serif;
  font-style: normal;
  font-weight: 500;
  font-size: 18px;
  line-height: 21px;
  /* identical to box height */
  color: #DB4747;
}

.line {
  position: absolute;
  width: 70px;
  height: 0px;
  left: 680px;
  top: 747px;
  border: 1px solid #FFFFFF;
}

.line-mobile {
  display: none;
  position: absolute;
  width: 70px;
  height: 0px;
  left: 16px;
  top: 427px;
  border: 1px solid #FFFFFF;
}

.icons-div-desktop {
  position: absolute;
  width: 304px;
  height: 92.33px;
  left: 767px;
  top: 666.67px;
}

.icons-div-mobile {
  position: absolute;
  display: none;
  width: 304px;
  height: 92.33px;
  left: 10px;
  top: 400px;
}

.fa {
  height: 23.00034523010254px;
  width: 24px;
  border-radius: 0px;
}

.icons-div-desktop a:link {
  color: white;
}

.icons-div-desktop a:visited {
  color: white;
}

.icons-div-mobile a:link {
  color: white;
  display: none;
}

.icons-div-mobile a:visited {
  color: white;
  display: none;
}

.project-one {
  position: absolute;
  max-width: 1440px;
  top: 1154px;
  background-color: #DB4747;
}

.image-1 {
  height: 279px;
  background: rgb(109,16,116);
  background: linear-gradient(90deg, rgba(109,16,116,1) 0%, rgba(13,6,17,1) 0%, rgba(29,66,161,1) 0%, rgba(93,25,149,1) 0%, rgba(8,6,9,1) 0%, rgba(102,9,47,1) 18%, rgba(85,8,38,1) 30%, rgba(16,17,2,1) 100%, rgba(48,154,235,1) 100%, rgba(0,212,255,1) 100%);
}

.image-2 {
  height: 279px;
  background: rgb(109,16,116);
  background: linear-gradient(90deg, rgba(109,16,116,1) 0%, rgba(13,6,17,1) 0%, rgba(93,25,149,1) 0%, rgba(8,6,9,1) 0%, rgba(29,66,161,1) 0%, rgba(14,1,6,1) 0%, rgba(11,36,106,1) 23%, rgba(1,3,14,1) 100%, rgba(9,40,102,1) 100%, rgba(1,1,17,1) 100%, rgba(48,154,235,1) 100%, rgba(0,212,255,1) 100%);
}

.project {
  height: 558px;
}

.project-name {
  width: 711px;
  height: 48px;
  padding-top: 10px;
  font-family: 'Poppins', sans-serif;
  font-size: 50px;
  color: #FFFFFF;
}

.tools p {
  font-family: 'Poppins', sans-serif;
  font-size: 20px;
  color: #FFFFFF;
  background: rgba(0, 0, 0, 0.5);
  padding: 5px;
}

button {
  width: 212px;
  height: 51px;
  font-family: 'Poppins', sans-serif;
  font-size: 18px;
  color: #FFFFFF;
  background: #DB4747;
  box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.25);
  border-radius: 4px;
  border: none;
}

.trip {
  margin-top: 12px;
  margin-left: 50px;
}

.button-links a:link {
  color: white;
}

.button-links a:visited {
  color: white;
}

.project-content {
  font-family: 'Poppins', sans-serif;
  font-size: 16px;
  color: #FFFFFF;
}
/* ###############################################-----FOOTER----############################################### */

/* ###############################################-----MEDIA QUERY----############################################### */

/* Dispositivos small (telefones em modo paisagem, com 576px ou mais) */
@media (max-width: 767px) {
  .header {
    display: none;
  }

  .logo-mobile {
    display: block;
  }

  .line-mobile {
    display: block;
  }

  .number-one-mobile {
    display: block;
  }

  .hello-mobile {
    display: block;
  }

  .name-mobile {
    display: block;
  }

  .my_word-mobile {
    display: block;
  }

  .social-text-mobile {
    display: block;
  }

  .logo-desktop {
    display: none;
  }

  .line {
    display: none;
  }

  .number-one {
    display: none;
  }

  .number-two {
    display: none;
  }

  .number-two-mobile {
    display: block;
  }

  .hello {
    display: none;
  }

  .name {
    display: none;
  }

  .my_word {
    display: none;
  }

  .social-text {
    display: none;
  }

  .icons-div-mobile {
    display: block;
  }

  .icons-div-desktop {
    display: none;
  }

  .icons-div-desktop a:link {
    color: white;
    display: none;
}

  .icons-div-desktop a:visited {
    color: white;
    display: none;
  }

  .icons-div-mobile a:link {
    display: block;
}

  .icons-div-mobile a:visited {
    display: block;
  }

  .portfolio-desktop {
    display: none;
  }

  .portfolio-mobile {
    display: block;
  }

  .projects-desktop {
    display: none;
  }

  .projects-mobile {
    display: block;
  }
}

